@@ -70,11 +70,8 @@ public class Tournament {
         Collections.swap(teams, a, b);
     }
 
-    /** Assigns initial seeds to the teams in the given list using their index in the given list */
-    public void assignInitialSeedValues(List<Team> teams) {
-        for (int i = 0; i < teams.size(); i++) {
-            teams.get(i).setInitialSeedValue(i + 1);
-        }
+    public void sortTeamsBySeed() {
+        teams.sort(Comparator.comparingInt(Team::getInitialSeedValue));
     }
 
     public List<Team> getTeams() {
@@ -153,13 +150,38 @@ public class Tournament {
             // This is the first stage, so all teams are transferred
             transferedTeams = new ArrayList<>(teams);
 
-            // Random seeding. We shuffle the order and initial seeds, then tell the stage to use seeding
-            if (seedingOption == SeedingOption.RANDOM_SEEDING) {
-                Collections.shuffle(transferedTeams);
-            }
+            if (seedingOption == SeedingOption.SEED_BY_ORDER) {
+                // Assign seeds based on order
+                for (int i = 0; i < teams.size(); i++) {
+                    teams.get(i).setInitialSeedValue(i + 1);
+                }
+                transferedTeams.sort((a, b) -> Integer.compare(b.getInitialSeedValue(), a.getInitialSeedValue()));
 
-            // Assign initial seeds based on this order
-            assignInitialSeedValues(transferedTeams);
+            } else if (seedingOption == SeedingOption.MANUALLY) {
+                // Seeds was assigned ny user. If some teams have the same seed value, shuffle those
+                final Random random = new Random();
+                transferedTeams.sort((a, b) -> {
+                    if (a == b) return 0;
+                    int comparison = Integer.compare(b.getInitialSeedValue(), a.getInitialSeedValue());
+                    if (comparison == 0) {
+                        return random.nextBoolean() ? 1 : -1;
+                    }
+                    return comparison;
+                });
+
+            } else if (seedingOption == SeedingOption.RANDOM_SEEDING) {
+                // Random seeding. We give everyone a seed value of 0 and shuffle the order
+                for (Team team : teams) {
+                    team.setInitialSeedValue(0);
+                }
+                Collections.shuffle(transferedTeams);
+
+            } else if (seedingOption == SeedingOption.NO_SEEDING) {
+                // Give everyone a seed value of zero, but no change to the order
+                for (Team team : teams) {
+                    team.setInitialSeedValue(0);
+                }
+            }
 
         } else {
 
