@@ -5,6 +5,7 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -96,7 +97,7 @@
             <Insets left="20.0" right="20.0" top="20.0" />
          </padding>
       </VBox>
-      <VBox id="PS-center" fx:id="teamSettingsVbox" maxWidth="360.0" minWidth="360.0" prefWidth="360.0" spacing="10.0" visible="false">
+      <VBox id="PS-center" fx:id="teamSettingsVbox" maxWidth="360.0" minWidth="360.0" prefWidth="360.0" spacing="10.0">
          <children>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Team Settings" wrappingWidth="180.80345344543457">
                <font>
@@ -106,19 +107,34 @@
                   <Insets top="15.0" />
                </VBox.margin>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Team name:">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Text>
-            <TextField fx:id="teamNameTextField" onKeyReleased="#teamNameTextFieldOnKeyReleased">
-               <padding>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </TextField>
+            <GridPane hgap="8.0" vgap="8.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Team name:">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Text>
+                  <TextField fx:id="teamNameTextField" onKeyReleased="#teamNameTextFieldOnKeyReleased" GridPane.rowIndex="1">
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </TextField>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Seed:" GridPane.columnIndex="1">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Text>
+                  <Spinner id="int-spinner" fx:id="seedSpinner" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               </children>
+            </GridPane>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Bots">
                <font>
                   <Font name="System" size="16.0" />
