@@ -1,3 +1,7 @@
+Unreleased changes (dev branch)
+- Added a manual seeding option, that allow the user to give multiple teams the same seed. #33 - NicEastvillage
+
+
 Version 1.1 - 8. Jan 2019
 - Teams are now serialized by index, which means teams and bots can be edited after saving and loading a tournament. #2 #25 - NicEastvillage
 - The content on settings tabs are now centered and scales less weirdly. #23 - NicEastvillage
